<resources>
    <string name="app_name">AT Record</string>
    <string name="full_app_name">AT Record</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="rename">Rename</string>
    <string name="choose">Choose</string>
    <string name="prepare_video">Prepare video...</string>
    <string name="setting_up_to_pro">setting_up_to_pro</string>
    <string name="setting_first_time_record">setting_first_time_record</string>
    <string name="setting_first_time_livestream">setting_first_time_livestream</string>
    <string name="setting_first_time_livestream_youtube">setting_first_time_livestream_youtube</string>
    <string name="setting_first_time_livestream_facebook">setting_first_time_livestream_facebook</string>
    <string name="setting_first_time_livestream_twitch">setting_first_time_livestream_twitch</string>
    <string name="setting_video_bitrate">setting_video_bitrate</string>
    <string name="setting_video_resolution">setting_video_resolution</string>
    <string name="setting_video_fps">setting_video_fps</string>
    <string name="setting_rtmp_youtube">setting_rtmp_youtube</string>
    <string name="setting_rtmp_facebook">setting_rtmp_facebook</string>
    <string name="setting_rtmp_twitch">setting_rtmp_twitch</string>
    <string name="setting_stream_key_youtube">setting_stream_key_youtube</string>
    <string name="setting_stream_key_facebook">setting_stream_key_facebook</string>
    <string name="setting_stream_key_twitch">setting_stream_key_twitch</string>
    <string name="setting_livestream_type">setting_livestream_type</string>
    <string name="setting_interstitial_percent">setting_interstitial_percent</string>
    <string name="setting_enable_camera_view">setting_enable_camera_view</string>
    <string name="setting_enable_floating_button">setting_enable_floating_button</string>
    <string name="setting_recording_number">setting_recording_number</string>
    <string name="setting_version_app">setting_version_app</string>
    <string name="setting_react_number">setting_react_number</string>
    <string name="setting_show_confirm_execute_number">setting_show_confirm_execute_number</string>
    <string name="setting_commentary_number">setting_commentary_number</string>
    <string name="setting_edit_number">setting_edit_number</string>
    <string name="setting_available_subs">setting_available_subs</string>
    <string name="setting_camera_mode">setting_camera_mode</string>
    <string name="setting_camera_position">setting_camera_position</string>
    <string name="setting_camera_size">setting_camera_size</string>
    <string name="setting_audio_source">setting_audio_source</string>
    <string name="setting_common_orientation">setting_common_orientation</string>
    <string name="setting_common_countdown">setting_common_countdown</string>
    <string name="setting_common_shared_preferences">setting_common_shared_preferences</string>
    <string name="default_setting_resolution">720p (HD)</string>
    <string name="default_setting_bitrate">8Mbps</string>
    <string name="default_setting_fps">30fps</string>
    <string name="default_setting_countdown">3</string>
    <string name="default_setting_orientation">Auto</string>
    <string name="default_camera_mode">Front</string>
    <string name="default_camera_position">Top Left</string>
    <string name="default_camera_size">Medium</string>
    <string name="default_audio_source">Microphone</string>
    <string name="video_resolution">Video Resolution</string>
    <string name="bitrate">Bitrate</string>
    <string name="frame_rate">Frame rate</string>
    <string name="_1080p_fhd">1080p (HD)</string>
    <string name="_480p_sd">480p (SD)</string>
    <string name="settings">Settings</string>
    <string name="how_to_record_your_screen">How to record your screen</string>
    <string name="how_to_livestream">How to livestream</string>
    <string name="floating_button">Floating Button</string>
    <string name="share_app_to_friends">Share App to Friends</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="restore_purchase">Restore Purchase</string>
    <string name="available_storage_2_43gb">Available Storage: </string>
    <string name="recording_cache_0_kb">Recording Cache: </string>
    <string name="support_us_by_rating_our_app">Support us by rating our app</string>
    <string name="contact_us">Contact us</string>
    <string name="next">Next</string>
    <string name="select_video_source">Select Video Source</string>
    <string name="react_to_videos_from_camera_roll">React to videos from my projects\n or Camera Roll</string>
    <string name="edit_video_from_my_recordings_or_camera_roll">Edit videos from my projects\n or Camera Roll</string>
    <string name="add_commentary_to_video_from_my_recordings_or_camera_roll">Add commentary to video from\n my projects or Camera Roll</string>
    <string name="camera_roll">Camera Roll</string>
    <string name="react_cam">React Cam</string>
    <string name="video_editor">Video Editor</string>
    <string name="commentary">Commentary</string>
    <string name="description_fb_live">Get the Facebook livestream URL and start livestreaming at the RTMP URL page. The livestream URL can be saved in the RTMP page. After setting the livecode, you can use it all the time unless you change it.</string>
    <string name="description_yt_live">Get the Youtube livestream URL and start livestreaming at the RTMP URL page. The livestream URL can be saved in the RTMP page. After setting the livecode, you can use it all the time unless you change it.</string>
    <string name="description_tw_live">Get the Twitch livestream URL and start livestreaming at the RTMP URL page. The livestream URL can be saved in the RTMP page. After setting the livecode, you can use it all the time unless you change it.</string>
    <string name="continue_">Continue</string>
    <string name="done_">Done</string>
    <string name="paste">Paste</string>
    <string name="start_livestreming">Start Livestreaming</string>
    <string name="enter_key">Please enter stream key here.</string>
    <string name="share">Share</string>
    <string name="my_recordings">My Projects</string>
    <string name="screen_recorder">Screen Recorder</string>
    <string name="tap_to_start_nrecording_screen">Tap to start\nrecording screen</string>
    <string name="tap_to_start_nlivestream">Tap to start\nLivestream</string>
    <string name="no_video">No Videos\nLet\'s make a new video! </string>
    <string name="resolution">Resolution</string>
    <string name="_4mbps">4Mbps</string>
    <string name="_30fps">30fps</string>
    <string name="framerate">Framerate</string>
    <string name="record_screen">Record Screen</string>
    <string name="unlock_unlimited">Unlock Unlimited</string>
    <string name="unlimited_duration_of_videos">Unlimited duration of videos</string>
    <string name="you_can_live_stream">You can live stream</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="skip"><u>Skip</u></string>
    <string name="start"><u>START</u></string>
    <string name="stop"><u>STOP</u></string>
    <string name="admob_sdk_id">ca-app-pub-2210513256218688~4750691232</string>
    <string name="admob_openapp_id">ca-app-pub-2210513256218688/4175976164</string>
    <string name="admob_banner_id">ca-app-pub-2210513256218688/7767736814</string>
    <string name="admob_intersitial_id">ca-app-pub-2210513256218688/1025400348</string>
    <string name="admob_sdk_id_debug">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_openapp_id_debug">ca-app-pub-2210513256218688/4175976164</string>
    <string name="admob_banner_id_debug">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_intersitial_id_debug">ca-app-pub-3940256099942544/1033173712</string>
    <string name="product_id_remove_ads">testing2</string>
    <string name="product_id_week">com.atsoft.screenrecord.weekly</string>
    <string name="product_id_month">com.atsoft.screenrecord.monthly</string>
    <string name="product_id_year">com.atsoft.screenrecord.yearly</string>
    <string name="guideline_record_step_1">Step 1: Tap to start button</string>
    <string name="guideline_record_step_2">Step 2: Record confirmation</string>
    <string name="guideline_record_step_5">Step 3: Wait 3s and the screen starts recording</string>
    <string name="guideline_live_step_1">Step 1: Tap the button "Livestream" in home screen</string>
    <string name="guideline_live_step_2">Step 2: Tap to choose type of social go to live</string>
    <string name="guideline_live_step_3">Step 3: Fill RTMP address and Stream key to start</string>
    <string name="confirm_execute_react_cam">This video is being processed in the background. This may take some time depending on the size of the video and the power of your device.</string>
    <string name="not_supported_for_react">React feature is not available for the current video. We recommend using a standard aspect ratio such as 16:9 or 4:3.</string>
    <string name="faq">FAQ</string>
    <string name="sound_is_not_working">Sound is not working</string>
    <string name="get_rtmp_address_and_streamkey"><u>Get RTMP URL/Stream key?</u></string>
    <string name="edit">Edit</string>
    <string name="livestreaming">Livestream</string>
    <string name="disconnect_livestream">Disconnect livestream</string>
    <string name="disconnect_live__">Disconnect live..</string>
    <string name="projects">Projects</string>
    <string name="save">Save</string>
    <string name="rtmp">rtmp://</string>
    <string name="rtmp_address">RTMP address</string>
    <string name="livestreaming_title">Livestreaming</string>
    <string name="camera_site_can_zoom_and_move_before_start">Camera site can zoom and move before start!!</string>
    <string name="step_1">Step 1:....</string>
    <string name="todo">TODO</string>
    <string name="_1_item_selected">1 video selected</string>
    <string name="ok">OK</string>
    <string name="stream_key">Stream key</string>
    <string name="_01_30">01:30</string>
    <string name="rtmp_address_title">RTMP live address</string>
    <string name="facebook_livestreaming">Facebook livestreaming</string>
    <string name="twitch_livestreaming">Twitch livestreaming</string>
    <string name="youtube_livestreaming">Youtube livestreaming</string>
    <string name="enter_text">Enter text</string>
    <string name="do_you_want_cancel_the_process">Do you want to cancel the process?</string>
    <string name="livestreaming_is_stopped">Livestreaming is stopped!</string>
    <string name="preparing_for_recording">Preparing for recording</string>
    <string name="question_1">Sound is not working</string>
    <string name="answer_1">Before starting your screen recording,make sure your phone is not in slient mode and the volume is on. Some apps do not allow the sound to be recorded, and it is a limitation we cannot bypass.</string>
    <string name="question_2">How do I turn on the microphone?</string>
    <string name="answer_2">Make sure you long press (or 3D touch it available) the record button, so a menu will appear to turn on the microphone.</string>
    <string name="question_3">I want to Face Cam while I screen record</string>
    <string name="answer_3">In screen record mode, you can add a Face Cam reaction with floating button: Open Settings and tap to show floating button, tap to icon camera (show/hide Camera).</string>
    <string name="question_4">My Video is saved to camera roll and I want to save it on the app</string>
    <string name="answer_4">Just make sure you long press (or 3D touch if available) the record button on the control center. Then, select Record it! as the destination app.</string>
</resources>