<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="430dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_round_35_orange"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/img_ava_option"
                android:layout_width="wrap_content"
                android:layout_height="56dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_microphone" />

            <ImageView
                android:id="@+id/img_btn_close"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="20dp"
                android:padding="6dp"
                android:src="@drawable/ic_exit" />
        </RelativeLayout>



        <TextView
            android:id="@+id/tv_title_option"
            style="@style/Body_List_Item_White_20_600"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/commentary"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            style="@style/Body_List_Item_White_24_600"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/select_video_source"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            android:id="@+id/tv_decs_popup"
            style="@style/Body_List_Item_White_18_400"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/add_commentary_to_video_from_my_recordings_or_camera_roll"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="18sp"
            tools:targetApi="p" />

        <RelativeLayout
            android:id="@+id/ln_select_my_recordings"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_round_15_white_camera_roll">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_recording_popup" />

            <TextView
                style="@style/Title_Orange_22_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/my_recordings"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ln_select_video_camera_roll"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_round_15_white_camera_roll">

            <ImageView
                android:layout_width="36dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="30dp"
                android:src="@drawable/ic_camera_roll_popup" />

            <TextView
                style="@style/Title_Orange_22_400"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/camera_roll"/>

        </RelativeLayout>

    </LinearLayout>
</LinearLayout>