<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/transparent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="350dp"
        android:layout_height="450dp"
        android:layout_gravity="center"
        android:background="@drawable/shape_round_orange"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="36dp"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_tick" />

        <TextView
            style="@style/Title_Orange_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/select_video_source"
            android:textColor="@color/white"
            android:textSize="24sp" />


        <TextView
            style="@style/Title_Orange_28"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/react_to_videos_from_camera_roll"
            android:textColor="@color/white"
            android:textFontWeight="400"
            android:textSize="18sp"
            tools:targetApi="p" />

        <LinearLayout
            android:id="@+id/ln_select_video"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginTop="110dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/shape_round_white_camera_roll"
            android:gravity="center">

            <ImageView
                android:layout_width="44dp"
                android:layout_height="33dp"
                android:layout_gravity="center_vertical"
                android:src="@drawable/ic_camera_roll" />

            <TextView
                style="@style/Title_Orange_28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="30dp"
                android:text="@string/camera_roll"
                android:textColor="@color/orange_check_radio" />

        </LinearLayout>

    </LinearLayout>
</LinearLayout>