<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_home"
    android:clickable="true"
    tools:ignore="KeyboardInaccessibleWidget">


    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/header_top_margin">


        <TextView
            android:id="@+id/title"
            style="@style/Title_Box_White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/how_to_livestream" />

        <TextView
            android:id="@+id/tv_btn_skip"
            style="@style/Title_Box_White"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/normal_margin"
            android:padding="@dimen/small_padding"
            android:text="@string/skip"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_decs"
        style="@style/Title_Box_White"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/normal_margin"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginRight="@dimen/normal_margin"
        android:gravity="center"
        android:text="@string/step_1" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btn_continue_"
        android:layout_below="@id/tv_decs"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/medium_margin"
        android:orientation="vertical">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_img_tutorial"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/lager_margin" />

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circle_indicator"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/normal_icon"
            android:layout_gravity="bottom|center"
            app:ci_drawable="@drawable/select_img"
            app:ci_drawable_unselected="@drawable/un_select_img"
            app:ci_height="8dp"
            app:ci_width="8dp"/>

    </FrameLayout>

    <TextView
        android:id="@+id/btn_continue_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/adView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/normal_margin"
        android:layout_marginBottom="@dimen/normal_margin"
        android:background="@drawable/custom_btn"
        android:gravity="center"
        android:text="@string/continue_"
        android:textColor="#FF694C"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/bottom_line"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    <View
        android:id="@+id/bottom_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/adview_margin" />
</RelativeLayout>