<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/custom_background"
    android:orientation="vertical" xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <TextView
            style="@style/Title_Box_White"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerVertical="true"
            android:text="@string/youtube_livestreaming" />

        <ImageView
            android:id="@+id/img_back_yt_slider"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:layout_marginStart="16dp"
            android:paddingStart="10dp"
            android:src="@drawable/ic_back_header_24" />
    </RelativeLayout>

    <TextView
        style="@style/Text_Description_White_15_400"
        android:layout_marginTop="18dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/description_fb_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager_img_youtube"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:layout_marginBottom="40dp"/>

        <me.relex.circleindicator.CircleIndicator3
            android:id="@+id/circle_indicator_youtube"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_gravity="bottom|center"
            app:ci_drawable_unselected="@drawable/un_select_img"
            app:ci_drawable="@drawable/select_img"
            app:ci_height="8dp"
            app:ci_width="8dp" />

    </FrameLayout>
    <TextView
        android:id="@+id/btn_continue_youtube_livestreaming"
        android:layout_marginTop="10dp"
        android:text="@string/continue_"
        android:textColor="#FF694C"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/custom_btn"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>